Version 0.4.10

2002-04-27  Kjetil Jacobsen  <kjetilja>

	* Fixed potential memory leak and thread race (by Markus
	Oberhumer)

Version 0.4.9

2002-04-15  Kjetil Jacobsen  <kjetilja>

	* Added CURLOPT_DEBUGFUNCTION to allow debug callbacks to be
	specified (see the file 'test_debug.py' for details on how to use
	debug callbacks).

	* Added CURLOPT_DNS_USE_GLOBAL_CACHE and
	CURLOPT_DNS_CACHE_TIMEOUT.

	* Fixed a segfault when finalizing curl objects in Python 1.5.2.

	* Now requires libcurl 7.9.6 or greater.

2002-04-12  Kjetil Jacobsen  <kjetilja>

	* Added 'test_post2.py' file which is another example on how to
	issue POST requests.

2002-04-11  Markus F.X.J. Oberhumer <mfx>

	* Added the 'test_post.py' file which demonstrates the use of
	POST requests.

Version 0.4.8

2002-03-07  Kjetil Jacobsen  <kjetilja>

	* Added CURLOPT_PREQUOTE.

	* Now requires libcurl 7.9.5 or greater.

	* Other minor code cleanups and bugfixes.

2002-03-05  Kjetil Jacobsen  <kjetilja>

	* Do not allow WRITEFUNCTION and WRITEHEADER on the same handle.

Version 0.4.7

2002-02-27  Kjetil Jacobsen  <kjetilja>

	* Abort callback if the thread state of the calling thread cannot
	be determined.

	* Check that the installed version of libcurl matches the
	requirements of pycurl.

2002-02-26  Kjetil Jacobsen  <kjetilja>

	* Clarence Garnder <clarence@silcom.com> found a bug where string
	arguments to setopt sometimes were prematurely deallocated, this
	should now be fixed.

2002-02-21  Kjetil Jacobsen  <kjetilja>

	* Added the 'xmlrpc_curl.py' file which implements a transport
	for xmlrpclib (xmlrpclib is part of Python 2.2).

	* Added CURLINFO_CONTENT_TYPE.

	* Added CURLOPT_SSLCERTTYPE, CURLOPT_SSLKEY, CURLOPT_SSLKEYTYPE,
	CURLOPT_SSLKEYPASSWD, CURLOPT_SSLENGINE and
	CURLOPT_SSLENGINE_DEFAULT.

	* When thrown, the pycurl.error exception is now a tuple consisting
	of the curl error code and the error message.

	* Now requires libcurl 7.9.4 or greater.

2002-02-19  Kjetil Jacobsen  <kjetilja>
